# Sentinel-sim-core

./: CMakeLists.txt  INVARIANTS.md  README.md
include/: fixed.hpp  sim_apply_input.hpp  sim_hash.hpp  sim_initial_state.hpp  sim_input.hpp  sim_input_file.hpp  sim_input_io.hpp  sim_input_log.hpp  sim_run_with_input.hpp  sim_runner.hpp  sim_snapshot.hpp  sim_snapshot_ops.hpp  sim_state.hpp  sim_update.hpp
include/rollback/: delayed_input_queue.hpp  peer_state.hpp
include/simcore/: fixed.hpp  platform_guard.hpp  sim_apply_input.hpp  sim_hash.hpp  sim_initial_state.hpp  sim_input.hpp  sim_input_file.hpp  sim_input_io.hpp  sim_input_log.hpp  sim_run_with_input.hpp  sim_runner.hpp  sim_snapshot.hpp  sim_snapshot_ops.hpp  sim_state.hpp  sim_update.hpp  simcore.hpp
include/simcore/rollback/: delayed_input_queue.hpp  peer_state.hpp
src/: main.cpp  sim_hash.cpp  sim_input_io.cpp  sim_runner.cpp  sim_update.cpp
tests/: test_determinism.cpp  test_input_file_replay.cpp  test_input_replay.cpp  test_invariant_violation.cpp  test_rewind.cpp  test_rollback_network.cpp
visual/: main.cpp  side_by_side.cpp
